--- a/ConfigServer/local-config/api-service.properties
+++ b/ConfigServer/local-config/api-service.properties
@@ -8,37 +8,23 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 server.port=8080
 
-
-
-# Gateway Configurations
-#spring.cloud.gateway.mvc.routes[0].id=employee-service
-#spring.cloud.gateway.mvc.routes[0].uri=lb://employee-service
-#spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/employee-service/**
-#spring.cloud.gateway.mvc.routes[0].filters[0]=StripPrefix=1
-
 # Auth Service
 spring.cloud.gateway.mvc.routes[0].id=auth-service
 spring.cloud.gateway.mvc.routes[0].uri=lb://auth-service
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/auth/**
-spring.cloud.gateway.mvc.routes[0].filters[0]=StripPrefix=2
+spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/auth/**
+spring.cloud.gateway.mvc.routes[0].filters[0]=StripPrefix=1
 
 # Employee endpoints
 spring.cloud.gateway.mvc.routes[1].id=employee-service
 spring.cloud.gateway.mvc.routes[1].uri=lb://employee-service
-spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/employee/**
+spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/employees/**
 spring.cloud.gateway.mvc.routes[1].filters[0]=StripPrefix=1
 
 # Department endpoints
 spring.cloud.gateway.mvc.routes[2].id=employee-service
 spring.cloud.gateway.mvc.routes[2].uri=lb://employee-service
-spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/api/department/**
+spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/api/**
 spring.cloud.gateway.mvc.routes[2].filters[0]=StripPrefix=1
-
-
-# Optional: add more services as needed
-# spring.cloud.gateway.mvc.routes[1].id=auth-service
-# spring.cloud.gateway.mvc.routes[1].uri=lb://auth-service
-# spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/auth-service/**
 
 # Actuator for debugging
 management.endpoints.web.exposure.include=health,info,gateway
