--- a/ConfigServer/local-config/application.properties
+++ b/ConfigServer/local-config/application.properties
@@ -19,3 +19,12 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.consumer.group-id=default-group
 spring.kafka.consumer.auto-offset-reset=earliest
 
+# ==========================
+# JWT Configuration
+# ==========================
+jwt.secret=abcdefghijklmnopqrstuvxyz1234567890
+# 24 hours in milliseconds (24 * 60 * 60 * 1000)
+jwt.expiration=86400000
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-service/.well-known/jwks.json
+
