--- a/ConfigServer/local-config/auth-service.properties
+++ b/ConfigServer/local-config/auth-service.properties
@@ -1,4 +1,4 @@
-spring.application.name=AuthenticationService
+spring.application.name=auth-service
 
 spring.kafka.consumer.group-id=auth-service-group
 employee.topic.name=user-created
