--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=config-server
 server.port=8888
 
 # ==========================
-# MODE SWITCHER (default = native)
+# MODE SWITCHER (default = git)
 # ==========================
-spring.profiles.active=${CONFIG_MODE:native}
+spring.profiles.active=${CONFIG_MODE:git}
 
 # Actuator settings
 management.endpoints.web.exposure.include=health,info
