--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     ports:
       - "8888:8888"
     environment:
-      SPRING_PROFILES_ACTIVE: docker
+      SPRING_PROFILES_ACTIVE: git
 
   discovery-service:
     build:
@@ -59,7 +59,6 @@ services:
     depends_on:
       - config-server
     environment:
-      SPRING_PROFILES_ACTIVE: docker
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
 
   # Business Services (depend on config and discovery)
@@ -75,7 +74,6 @@ services:
       - discovery-service
       - kafka
     environment:
-      SPRING_PROFILES_ACTIVE: docker
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-service:8761/eureka"
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
@@ -92,7 +90,6 @@ services:
       - discovery-service
       - kafka
     environment:
-      SPRING_PROFILES_ACTIVE: docker
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-service:8761/eureka"
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
@@ -109,7 +106,6 @@ services:
       - discovery-service
       - kafka
     environment:
-      SPRING_PROFILES_ACTIVE: docker
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-service:8761/eureka"
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
