--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,24 @@
+version: '3.8'
+
 services:
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    environment:
+      POSTGRES_DB: users_db
+      POSTGRES_USER: darum_project
+      POSTGRES_PASSWORD: darumtest
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U darum_project"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
   # Infrastructure Services
   zookeeper:
     image: confluentinc/cp-zookeeper:7.4.1
@@ -48,6 +68,11 @@ services:
       - "8888:8888"
     environment:
       SPRING_PROFILES_ACTIVE: git
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8888/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   discovery-service:
     build:
@@ -57,9 +82,15 @@ services:
     ports:
       - "8761:8761"
     depends_on:
-      - config-server
+      config-server:
+        condition: service_healthy
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8761/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Business Services (depend on config and discovery)
   auth-service:
@@ -70,9 +101,14 @@ services:
     ports:
       - "8083:8083"
     depends_on:
-      - config-server
-      - discovery-service
-      - kafka
+      config-server:
+        condition: service_healthy
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+      postgres:
+        condition: service_healthy
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-service:8761/eureka"
@@ -86,9 +122,14 @@ services:
     ports:
       - "8081:8081"
     depends_on:
-      - config-server
-      - discovery-service
-      - kafka
+      config-server:
+        condition: service_healthy
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_started
+      postgres:
+        condition: service_healthy
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-service:8761/eureka"
@@ -102,10 +143,16 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - config-server
-      - discovery-service
-      - kafka
+      config-server:
+        condition: service_healthy
+      discovery-service:
+        condition: service_healthy
+      kafka:
+        condition: service_started
     environment:
       SPRING_CONFIG_IMPORT: "configserver:http://config-server:8888"
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: "http://discovery-service:8761/eureka"
       KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+
+volumes:
+  postgres_data:
