--- a/ConfigServer/local-config/application.properties
+++ b/ConfigServer/local-config/application.properties
@@ -2,6 +2,13 @@
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
+# ===== Default Admin Configuration =====
+app.default.admin.email=info@darumtest.com
+app.default.admin.first-name=System
+app.default.admin.last-name=Admin
+app.default.admin.password=Password123
+app.default.admin.department-name=Administration
+app.default.admin.department-description=Main Admin Department
 
 # ========== Kafka Common Configuration ==========
 spring.kafka.bootstrap-servers=localhost:29092
@@ -18,7 +25,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.kafka.consumer.group-id=default-group
 spring.kafka.consumer.auto-offset-reset=earliest
-
+spring.kafka.admin.properties.auto.create.topics.enable=true
 # ==========================
 # JWT Configuration
 # ==========================
