--- a/ConfigServer/local-config/employee-service.properties
+++ b/ConfigServer/local-config/employee-service.properties
@@ -11,3 +11,6 @@ spring.datasource.password=darumtest
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
