--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8888
 # ==========================
 # MODE SWITCHER (default = git)
 # ==========================
-spring.profiles.active=${CONFIG_MODE:git}
+spring.profiles.active=${CONFIG_MODE:native}
 
 # Actuator settings
 management.endpoints.web.exposure.include=health,info
