--- a/ConfigServer/local-config/api-service.properties
+++ b/ConfigServer/local-config/api-service.properties
@@ -26,6 +26,16 @@ spring.cloud.gateway.mvc.routes[2].uri=lb://employee-service
 spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/api/**
 spring.cloud.gateway.mvc.routes[2].filters[0]=StripPrefix=1
 
+# --- Springdoc Swagger UI aggregation: list each service's api-docs URLs ---
+springdoc.swagger-ui.urls[0].name=Auth Service
+springdoc.swagger-ui.urls[0].url=http://localhost:8083/v3/api-docs
+
+springdoc.swagger-ui.urls[1].name=Employee Service
+springdoc.swagger-ui.urls[1].url=http://localhost:8081/v3/api-docs
+
+# Set path for the gateway UI
+springdoc.swagger-ui.path=/swagger-ui.html
+
 # Actuator for debugging
 management.endpoints.web.exposure.include=health,info,gateway
 management.endpoint.health.show-details=always
