--- a/ConfigServer/local-config/auth-service.properties
+++ b/ConfigServer/local-config/auth-service.properties
@@ -10,4 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
 server.port = 8083
