--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,16 @@ services:
     container_name: postgres
     environment:
       POSTGRES_DB: users_db
+      POSTGRES_MULTIPLE_DATABASES: users_db,employee_db
       POSTGRES_USER: darum_project
       POSTGRES_PASSWORD: darumtest
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./init-multiple-databases.sh:/docker-entrypoint-initdb.d/init-multiple-databases.sh
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U darum_project"]
+      test: [ "CMD-SHELL", "pg_isready -U darum_project" ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -47,6 +49,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
   kafdrop:
     image: obsidiandynamics/kafdrop:latest
