--- a/ConfigServer/local-config/application.properties
+++ b/ConfigServer/local-config/application.properties
@@ -27,6 +27,9 @@ spring.kafka.consumer.group-id=default-group
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.admin.properties.auto.create.topics.enable=true
 # ==========================
+
+update.topic.name=user-updated
+delete.topic.name=user-deleted
 # JWT Configuration
 # ==========================
 jwt.secret=abcdefghijklmnopqrstuvxyz1234567890
